--- a/Neuro2/Neuro2.vcxproj.filters
+++ b/Neuro2/Neuro2.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Neuro2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NeuroNetwork.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="NeuroNetwork.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
